# erato

./: .cursorignore  .dockerignore  .gitattributes  .gitignore  .gitmodules  .hadolint.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.combined  README.md  justfile
backend/: .env.template  .gitignore  Cargo.toml  Dockerfile  Dockerfile.mock-llm-server  Dockerfile.mock-mcp-server  Dockerfile.sqitch-migrator  Dockerfile.test  deny.toml  erato.template.toml  justfile  run_azblob.sh  run_jaeger.sh  run_mcp_servers.sh  run_minio.sh  run_mock_mcp_server.sh  run_ollama_smol.sh  run_postgres.sh  run_postgresh.sh  run_seaweedfs.sh
backend/erato/: Cargo.toml
backend/erato/src/: config.rs  config_facet_attrs.rs  config_reference.rs  frontend_environment.rs  gen_config_reference.rs  lib.rs  main.rs  metrics.rs  metrics_constants.rs  normalize_profile.rs  profiling.rs  query_metrics.rs  record_chat_provider_reqwest.rs  startup_log.rs  state.rs  system_prompt_renderer.rs  telemetry.rs  translation_po.rs
backend/erato/tests/: integration_test_file_processor_snapshots.rs
backend/mock-llm-server/: Cargo.toml  README.md
backend/mock-llm-server/image_data/: cat_image.base64
backend/mock-llm-server/src/: image_data.rs  log.rs  main.rs  matcher.rs  request_id.rs  responses.rs
backend/mock-mcp-server/: Cargo.toml  README.md
backend/mock-mcp-server/src/: lib.rs  main.rs
backend/ollama-smol/: Dockerfile  README.md  justfile
backend/policy/backend/: backend.rego  backend_test.rego
backend/rmcp-sse/: Cargo.toml
backend/rmcp-sse/src/: client_side_sse.rs  http_header.rs  lib.rs
backend/sqitch/: README.md  current_schema.sql  deploy_distributed.sh  dump_current_schema.sh  generate_summary.sh  justfile  latest_change.txt  new_migration.sh  sqitch.conf  sqitch.plan  sqitch_summary.json
backend/sqitch/deploy/: 0001_init_database.sql  0002_add_chat_and_messages_tables.sql  0003_add_users_table.sql  0004_add_view_for_last_message_at.sql  0005_adjust_message_lineage.sql  0006_add_chats_summary_and_archived.sql  0007_add_file_uploads_table.sql  0008_alter_messages_raw_message_structure_to_array.sql  0009_add_generation_paramters_generation_metadata_columns.sql  0010_add_view_user_daily_token_usage.sql  0011_adjust_view_user_daily_token_usage.sql  0012_migrate_file_uploads_relation_to_own_table.sql  0013_add_assistants_table.sql  0014_add_share_grants_table.sql  0015_add_message_feedbacks_table.sql  0016_add_title_by_user_provided_to_chats.sql  0017_add_user_preferences_table.sql  0018_add_owner_user_id_to_file_uploads.sql  0019_add_assistant_facets.sql  0020_add_share_links_table.sql  0021_add_input_parameters_to_messages.sql  0022_add_mcp_server_oauth_tables.sql  0023_optimize_active_thread_siblings_constraint.sql  0024_add_audio_transcription_to_file_uploads.sql  0025_add_chat_title_search_index.sql  0026_add_assistant_store_tables.sql  0027_assistant_store_featured_assistant_wide.sql  0028_rename_assistant_store_to_assistant_hub.sql  0029_add_assistant_hub_reviews.sql  0030_add_generation_state_to_chats.sql
backend/sqitch/revert/: 0001_init_database.sql  0002_add_chat_and_messages_tables.sql  0003_add_users_table.sql  0004_add_view_for_last_message_at.sql  0005_adjust_message_lineage.sql  0006_add_chats_summary_and_archived.sql  0007_add_file_uploads_table.sql  0008_alter_messages_raw_message_structure_to_array.sql  0009_add_generation_paramters_generation_metadata_columns.sql  0010_add_view_user_daily_token_usage.sql  0011_adjust_view_user_daily_token_usage.sql  0012_migrate_file_uploads_relation_to_own_table.sql  0013_add_assistants_table.sql  0014_add_share_grants_table.sql  0015_add_message_feedbacks_table.sql  0016_add_title_by_user_provided_to_chats.sql  0017_add_user_preferences_table.sql  0018_add_owner_user_id_to_file_uploads.sql  0019_add_assistant_facets.sql  0020_add_share_links_table.sql  0021_add_input_parameters_to_messages.sql  0022_add_mcp_server_oauth_tables.sql  0023_optimize_active_thread_siblings_constraint.sql  0024_add_audio_transcription_to_file_uploads.sql  0025_add_chat_title_search_index.sql  0026_add_assistant_store_tables.sql  0027_assistant_store_featured_assistant_wide.sql  0028_rename_assistant_store_to_assistant_hub.sql  0029_add_assistant_hub_reviews.sql  0030_add_generation_state_to_chats.sql
backend/sqitch/verify/: 0001_init_database.sql  0002_add_chat_and_messages_tables.sql  0003_add_users_table.sql  0004_add_view_for_last_message_at.sql  0005_adjust_message_lineage.sql  0006_add_chats_summary_and_archived.sql  0007_add_file_uploads_table.sql  0008_alter_messages_raw_message_structure_to_array.sql  0009_add_generation_paramters_generation_metadata_columns.sql  0010_add_view_user_daily_token_usage.sql  0011_adjust_view_user_daily_token_usage.sql  0012_migrate_file_uploads_relation_to_own_table.sql  0013_add_assistants_table.sql  0014_add_share_grants_table.sql  0015_add_message_feedbacks_table.sql  0016_add_title_by_user_provided_to_chats.sql  0017_add_user_preferences_table.sql  0018_add_owner_user_id_to_file_uploads.sql  0019_add_assistant_facets.sql  0020_add_share_links_table.sql  0021_add_input_parameters_to_messages.sql  0022_add_mcp_server_oauth_tables.sql  0023_optimize_active_thread_siblings_constraint.sql  0024_add_audio_transcription_to_file_uploads.sql  0025_add_chat_title_search_index.sql  0026_add_assistant_store_tables.sql  0027_assistant_store_featured_assistant_wide.sql  0028_rename_assistant_store_to_assistant_hub.sql  0029_add_assistant_hub_reviews.sql  0030_add_generation_state_to_chats.sql
backend/src/: config.rs  frontend_environment.rs  gen_openapi.rs  lib.rs  main.rs  normalize_profile.rs  state.rs  telemetry.rs
backend/src/actors/: cleanup_worker.rs  cron_jobs.rs  mod.rs  supervisor.rs
backend/src/models/: assistant.rs  chat.rs  file_upload.rs  message.rs  message_feedback.rs  mod.rs  permissions.rs  share_grant.rs  user.rs
backend/src/policy/: engine.rs  mod.rs  types.rs
backend/src/server/: mod.rs  router.rs
backend/src/services/: background_tasks.rs  file_parsing.rs  file_processing_cached.rs  file_storage.rs  (+12 more)
(+1575 files in other folders)
