[workspace]
resolver = "2"
members = ["erato", "mock-llm-server", "mock-mcp-server", "rmcp-sse"]

[profile.dev]
split-debuginfo = "packed"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
pdf_oxide.opt-level = 3

[profile.release]
# Better stack traces in production deployments
debug = "full"
split-debuginfo = "packed"

#[patch.crates-io]
#html-to-markdown-rs = { path = "../../html-to-markdown-dfc0ce7/crates/html-to-markdown" }
