[workspace]
resolver = "2"
members = ["erato", "mock-llm-server", "mock-mcp-server", "rmcp-sse"]

[profile.dev]
split-debuginfo = "packed"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
pdf_oxide.opt-level = 3
html-to-markdown-rs.opt-level = 3
xberg.opt-level = 3

[profile.test.package]
insta.opt-level = 3
similar.opt-level = 3
pdf_oxide.opt-level = 3
html-to-markdown-rs.opt-level = 3
xberg.opt-level = 3

[profile.release]
# Better stack traces in production deployments
debug = "full"
split-debuginfo = "packed"
