[package]
name = "erato"
version = "0.5.2"
license = "AGPL-3.0-or-later"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "gen-openapi"
path = "./src/gen_openapi.rs"

[[bin]]
name = "gen-config-reference"
path = "./src/gen_config_reference.rs"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["typed-header", "multipart"] }
headers = "0.4.0"
tower-http = { version = "0.6.2",  features = ["fs", "cors", "limit", "trace"] }
sea-orm = { version = "1.1.10",  features = ["runtime-tokio", "sqlx-postgres", "runtime-tokio-native-tls"]}
sqlx = { version = "0.8.5", features=["postgres", "runtime-tokio", "runtime-tokio-native-tls"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
secrecy = "0.10.3"
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
tracing = "0.1.41"
facet = "0.44.3"
synonym = "0.1.5"
regorus = "0.5.0"
eyre = "0.6.12"
color-eyre = "0.6.3"
async-trait = "0.1.77"
jsonwebtoken = "9.2.0"
# OpenAPI handling
utoipa = { version = "5.3.1", features = ["axum_extras", "uuid", "chrono"] }
utoipa-axum = "0.2.0"
utoipa-scalar = { version = "0.3.0", features = ["axum"] }

dotenv-flow = "0.16.2"
config = "0.15.6"
http-body-util = "0.1.2"
lol_html = "2.2.0"
ordered-multimap = { version = "0.7.3",  features = ["serde"]}
handlebars = "6"
futures = "0.3"
tokio-stream = { version = "0.1.17", features = ["sync"] }
genai = { version = "0.6.0-beta.17-WIP", git = "https://github.com/EratoLab/rust-genai.git", rev = "5fed6f91c17d1e0c151ca149b9d1a9daf3558fb8" }
reqwest = { version = "0.13.1", features = ["multipart"] }
reqwest_012 = { package = "reqwest", version = "0.12.28" }
opendal = { version = "0.52.0", features = ["services-s3", "services-azblob"] }
percent-encoding = "2.3.1"

# MS Graph API client for Sharepoint/OneDrive integration
graph-rs-sdk = "3.0"

infer = "0.19.0"
tiktoken-rs = "0.6.0"
moka = { version = "0.12.13", features = ["future"] }
rmcp = { version = "=1.3.0", features = ["auth", "client", "reqwest", "transport-streamable-http-client-reqwest"] }
rmcp-sse = { path = "../rmcp-sse" }
ractor = "0.15.9"
ractor_actors = { version = "0.4.9", features = ["time"] }
chrono = "0.4"
cron = "0.12.1"

# Dependencies: Observability
sentry-tower = { version = "0.41.0", optional = true, features = ["http"] }
opentelemetry = "0.31.0"
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio-current-thread"] }
opentelemetry-otlp = { version = "0.31.0", default-features = false, features = ["grpc-tonic", "http-proto", "reqwest-blocking-client", "trace", "metrics", "logs", "internal-logs" ] }
opentelemetry-semantic-conventions = "0.29.0"
tracing-opentelemetry = "0.32.0"
axum-tracing-opentelemetry = "0.32.2"
metrics = "0.24"
metrics-exporter-prometheus = "0.17.2"
tokio-metrics = { version = "0.4.7", features = ["metrics-rs-integration"] }
base64 = "0.22.1"
aes-gcm-siv = "0.11.1"
hmac = "0.12.1"
sha2 = "0.10.9"
url = "2.5.8"
# Tokio console for async debugging
console-subscriber = { version = "0.5.0", optional = true }
kreuzberg = { version = "=4.9.4",  features = ["bundled-pdfium", "excel", "office", "email", "html", "archives"]}
jemalloc_pprof = { version = "0.8.2", optional = true, features = ["flamegraph", "symbolize"] }
tikv-jemallocator = { version = "0.6.1", optional = true, features = ["profiling", "unprefixed_malloc_on_supported_platforms"] }

[dependencies.sentry]
version = "0.41.0"
optional = true
default-features = false
# Default features, except for `debug-images`; See https://github.com/getsentry/sentry-rust/issues/574
features = ["backtrace", "contexts", "panic", "transport", "reqwest", "native-tls"]

[dev-dependencies]
test-log = "0.2.14"
ctor = "0.2.9"
axum-test = "17.0.0"
tempfile = "3.14.0"
mocktail = { git = "https://github.com/EratoLab/mocktail.git", rev = "4a99543bcfe0511db6eea524a037a670b96a6faf" }
#env_logger = "0.11.2"
#pretty_assertions = "1.4.0"

[features]
default = ["sentry"]
sentry = ["dep:sentry", "dep:sentry-tower"]
tokio-console = ["dep:console-subscriber"]
profiling = ["dep:jemalloc_pprof", "dep:tikv-jemallocator"]
