[package]
name = "erato"
version = "0.6.2"
license = "AGPL-3.0-or-later"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "gen-openapi"
path = "./src/gen_openapi.rs"

[[bin]]
name = "gen-config-reference"
path = "./src/gen_config_reference.rs"

[[bin]]
name = "record-chat-provider-reqwest"
path = "./src/record_chat_provider_reqwest.rs"

[dependencies]
# Dependencies: Server
axum = { version = "0.8.4", features = ["macros", "ws"] }
axum-extra = { version = "0.10.1", features = ["typed-header", "multipart"] }
headers = "0.4.0"
tower-http = { version = "0.6.2",  features = ["fs", "cors", "limit", "trace"] }
http-body-util = "0.1.2"
lol_html = "2.2.0"
ordered-multimap = { version = "0.7.3",  features = ["serde"]}

# Dependencies: OpenAPI handling
utoipa = { version = "5.3.1", features = ["axum_extras", "uuid", "chrono"] }
utoipa-axum = "0.2.0"
utoipa-scalar = { version = "0.3.0", features = ["axum"] }

# Dependencies: Database
sea-orm = { version = "2.0.0-rc.40", default-features = false, features = ["macros", "with-json", "with-chrono", "with-rust_decimal", "with-uuid", "with-time", "sqlite-use-returning-for-3_35", "runtime-tokio-rustls", "sqlx-postgres"] }
sqlx = { version = "0.9.0", default-features = false, features = ["postgres", "runtime-tokio", "tls-rustls", "json", "macros", "migrate", "chrono", "uuid"] }

# Dependencies: General I/O
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"

# Dependencies: Outgoing HTTP
reqwest = { version = "0.13.1", default-features = false, features = ["rustls", "charset", "http2", "system-proxy", "multipart"] }
reqwest-middleware = "0.5.1"
reqwest-tracing = { version = "0.7.1", features = ["opentelemetry_0_32"] }

# Dependencies: Security
aes-gcm-siv = "0.11.1"
hmac = "0.13.0"
jsonwebtoken = "10.4.0"
regorus = "0.5.0"
secrecy = "0.10.3"
sha2 = "0.11.0"

# Dependencies: Async runtime
tokio = { version = "1.52.3", features = ["rt-multi-thread"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
async-trait = "0.1.89"
futures = "0.3.32"

# Dependencies: Background workers
ractor = "0.15.13"
ractor_actors = { version = "0.5.0", default-features = false, features = ["time"] }
cron = "0.16.0"

# Dependencies: LLM / GenAI
genai = { version = "0.6.0-beta.19-WIP", git = "https://github.com/EratoLab/rust-genai.git", rev = "0edafffd027d47c9c5bb87311e93043779c333de" }
tiktoken-rs = "0.12.0"

# Dependencies: MCP
rmcp = { version = "=1.7.0", features = ["auth", "client", "reqwest", "transport-streamable-http-client-reqwest"] }
rmcp-sse = { path = "../rmcp-sse" }

# Dependencies: Observability
sentry-tower = { version = "0.41.0", optional = true, features = ["http"] }
opentelemetry = "0.32.0"
opentelemetry_sdk = { version = "0.32.1", features = ["rt-tokio-current-thread"] }
opentelemetry-otlp = { version = "0.32.0", default-features = false, features = ["grpc-tonic", "http-proto", "http-json", "reqwest-blocking-client", "reqwest-rustls", "trace", "metrics", "logs", "internal-logs" ] }
opentelemetry-semantic-conventions = { version = "=0.32.0", features = ["semconv_experimental"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
tracing = "0.1.41"
tracing-opentelemetry = "0.33.0"
axum-tracing-opentelemetry = "0.38.0"
metrics = "0.24"
metrics-exporter-prometheus = "0.17.2"
tokio-metrics = { version = "0.4.7", features = ["metrics-rs-integration"] }
eyre = "0.6.12"
color-eyre = "0.6.3"

# Dependencies: File storage & file handling
opendal = { version = "0.56.0", features = ["services-s3", "services-azblob"] }
infer = "0.19.0"
xberg = { version = "1.0.0-rc.29", features = ["pdf", "excel", "office", "email", "html", "archives"] }
html-to-markdown-rs = { version = "3.8.3" }
ical = "0.11.0"

# Dependencies: Integgration / MS Graph API client for Sharepoint/OneDrive
graph-rs-sdk = { version = "3.0", default-features = false, features = ["rustls-tls"] }

# Dependencies: Uncategorized
regex = "1.12.3"
rand = "0.9.4"
base64 = "0.22.1"
facet = "0.44.3"
# Newtype utility
synonym = "0.1.5"
config = "0.15.6"
dotenv-flow = "0.16.2"
handlebars = "6"
percent-encoding = "2.3.1"
moka = { version = "0.12.13", features = ["future"] }
chrono = "0.4"
url = "2.5.8"

# Dependencies: Optional feature: tokio-console / profiling
# Tokio console for async debugging
console-subscriber = { version = "0.5.0", optional = true }
jemalloc_pprof = { version = "0.8.2", optional = true, features = ["flamegraph", "symbolize"] }
tikv-jemallocator = { version = "0.6.1", optional = true, features = ["profiling", "unprefixed_malloc_on_supported_platforms"] }

[dependencies.sentry]
version = "0.41.0"
optional = true
default-features = false
# Default features, except for `debug-images`; See https://github.com/getsentry/sentry-rust/issues/574
features = ["backtrace", "contexts", "panic", "reqwest", "rustls"]

[dev-dependencies]
test-log = "0.2.14"
ctor = "0.2.9"
axum-test = { version = "17.0.0", features = ["ws"] }
tempfile = "3.14.0"
mocktail = { git = "https://github.com/EratoLab/mocktail.git", rev = "4a99543bcfe0511db6eea524a037a670b96a6faf" }
insta = "1.47.2"
#env_logger = "0.11.2"
#pretty_assertions = "1.4.0"

[features]
default = ["sentry"]
sentry = ["dep:sentry", "dep:sentry-tower"]
tokio-console = ["dep:console-subscriber"]
profiling = ["dep:jemalloc_pprof", "dep:tikv-jemallocator"]
