[package]
name = "mock-llm-server"
version = "0.1.0"
license = "AGPL-3.0-or-later"
edition = "2021"

[[bin]]
name = "mock-llm-server"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
tower-http = { version = "0.6.2", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
colored = "2.1"
rand = "0.8"
tower = "0.5"

