[package]
name = "mock-mcp-server"
version = "0.1.0"
license = "AGPL-3.0-or-later"
edition = "2021"

[[bin]]
name = "mock-mcp-server"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8.4" }
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros", "time", "signal"] }
rmcp = { version = "0.10.0", features = ["server", "transport-streamable-http-server"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
colored = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
