[package]
name = "rmcp-sse"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
futures = "0.3"
http = "1.3.1"
pin-project-lite = "0.2"
reqwest = { version = "0.13.2", default-features = true, features = ["json", "stream"] }
rmcp = { version = "=1.3.0", features = ["client"] }
serde_json = "1.0"
sse-stream = "0.2"
thiserror = "2.0"
tokio = { version = "1.43.0", features = ["time"] }
tracing = "0.1"
